<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="MissingClass">

    <TextView
        android:id="@+id/tp1"
        android:text="@string/shosename_name"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_weight="3"/>

    <TextView
        android:id="@+id/tp2"
        android:text="@string/search_code"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_weight="2"/>

    <TextView
        android:id="@+id/tp3"
        android:text="@string/position_name"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_weight="1"/>

</androidx.appcompat.widget.LinearLayoutCompat>