<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChoiceActivity">

    <Button
        android:id="@+id/serch_choice"
        android:layout_width="200dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/review_choic"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/search_name"
        android:textSize="30dp"/>

    <Button
        android:id="@+id/review_choic"
        android:layout_width="200dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toBottomOf="@id/serch_choice"
        app:layout_constraintBottom_toTopOf="@id/input_choice"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/review_name"
        android:textSize="30dp"/>

    <Button
        android:id="@+id/input_choice"
        android:layout_width="200dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toBottomOf="@id/review_choic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/input_name"
        android:textSize="30dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>