<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/DataModify_Name_tv"
        android:text="@string/DataModify_ShoesName_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/DataModify_Name_et"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/DataModify_Code_tv"/>

    <EditText
        android:id="@+id/DataModify_Name_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/DataModify_Name_tv"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/DataModify_Code_et" />

    <TextView
        android:id="@+id/DataModify_Code_tv"
        android:text="@string/DataModify_ShoesCode_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/DataModify_Code_et"
        app:layout_constraintTop_toBottomOf="@id/DataModify_Name_tv"
        app:layout_constraintBottom_toTopOf="@id/DataModify_Position_tv"/>

    <EditText
        android:id="@+id/DataModify_Code_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/DataModify_Code_tv"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/DataModify_Name_et"
        app:layout_constraintBottom_toTopOf="@id/DataModify_Position_et"/>

    <TextView
        android:id="@+id/DataModify_Position_tv"
        android:text="@string/DataModify_Position_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/DataModify_Position_et"
        app:layout_constraintTop_toBottomOf="@id/DataModify_Code_tv"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <EditText
        android:id="@+id/DataModify_Position_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/DataModify_Position_tv"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/DataModify_Code_et"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>