<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DataInputActivity">

    <TextView
        android:id="@+id/DI_shoseCode"
        android:text="@string/search_code"
        android:textSize="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/DI_position"
        app:layout_constraintLeft_toLeftOf="parent"></TextView>

    <TextView
        android:id="@+id/DI_position"
        android:text="@string/position_name"
        android:textSize="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/DI_inputcode"
        app:layout_constraintBottom_toTopOf="@id/DI_shosename"
        app:layout_constraintLeft_toLeftOf="parent"
        ></TextView>

    <TextView
        android:id="@+id/DI_shosename"
        android:text="@string/shosename_name"
        android:textSize="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/DI_position"
        app:layout_constraintBottom_toTopOf="@id/DI_inputButton"
        app:layout_constraintLeft_toLeftOf="parent"></TextView>

    <EditText
        android:id="@+id/DI_inputcode"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textSize="40dp"
        app:layout_constraintBottom_toTopOf="@id/DI_position"
        app:layout_constraintLeft_toRightOf="@id/DI_shoseCode"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        ></EditText>

    <EditText
        android:id="@+id/DI_inputposition"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textSize="40dp"
        app:layout_constraintTop_toBottomOf="@id/DI_inputcode"
        app:layout_constraintBottom_toTopOf="@id/DI_inputname"
        app:layout_constraintLeft_toRightOf="@id/DI_position"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        ></EditText>

    <EditText
        android:id="@+id/DI_inputname"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textSize="40dp"
        app:layout_constraintTop_toBottomOf="@id/DI_inputposition"
        app:layout_constraintBottom_toTopOf="@id/DI_inputButton"
        app:layout_constraintLeft_toRightOf="@id/DI_shosename"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        ></EditText>

    <Button
        android:id="@+id/DI_inputButton"
        android:text="@string/input_name"
        android:textSize="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/DI_LV"
        app:layout_constraintTop_toBottomOf="@id/DI_inputcode"
        app:layout_constraintLeft_toRightOf="@id/deleteAlldata"
        app:layout_constraintRight_toRightOf="parent"></Button>

    <ListView
        android:id="@+id/DI_LV"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/DI_inputButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:listSelector="@color/teal_200"
        tools:listitem="@layout/layout"></ListView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/deleteAlldata"
        android:text="delete all data"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/DI_inputButton"
        app:layout_constraintTop_toBottomOf="@id/DI_inputname"
        app:layout_constraintBottom_toTopOf="@id/DI_LV"
        />

</androidx.constraintlayout.widget.ConstraintLayout>